--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,14 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
-    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.12.Final'
+    // compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.12.Final'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '4.3.11.Final'
 
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-annotations
-    compile group: 'org.hibernate', name: 'hibernate-annotations', version: '3.5.6-Final'
+    // compile group: 'org.hibernate', name: 'hibernate-annotations', version: '3.5.6-Final'
 
-    // https://mvnrepository.com/artifact/org.hsqldb/hsqldb
-    testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.5.0'
+    // https://mvnrepository.com/artifact/org.hibernate.common/hibernate-commons-annotations
+    compile group: 'org.hibernate.common', name: 'hibernate-commons-annotations', version: '4.0.5.Final'
 
     // https://mvnrepository.com/artifact/org.objenesis/objenesis
 //    testCompile group: 'org.objenesis', name: 'objenesis', version: '3.1'
@@ -37,7 +38,10 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
     // Mockito
-    implementation 'org.mockito:mockito-core:3.3.0'
+    testImplementation 'org.mockito:mockito-core:3.3.0'
+
+    // https://mvnrepository.com/artifact/org.hsqldb/hsqldb
+    testImplementation group: 'org.hsqldb', name: 'hsqldb', version: '2.5.0'
 
     // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
