--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Created by https://www.gitignore.io/api/intellij
 # Edit at https://www.gitignore.io/?templates=intellij
 
-### Intellij ###
+### Intellij
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -89,11 +89,18 @@ fabric.properties
 .idea/**/markdown-navigator.xml
 .idea/**/markdown-navigator/
 
-## Gradle init
+### Gradle init
 # Ignore Gradle project-specific cache directory
 .gradle
 
 # Ignore Gradle build output directory
 build
+
+### app for test
+app/leiloes.db.*
+app/leiloes.db.tmp/
+app/target
+app/src/main/webapp/WEB-INF/lib
+app/src/main/webapp/WEB-INF/classes
 
 # End of https://www.gitignore.io/api/intellij
